fixed nav bar overflow. increased menu items size

--- a/src/main/css/mainpage.css
+++ b/src/main/css/mainpage.css
@@ -53,7 +53,7 @@ h2 {
     letter-spacing: 3px;
 }
 h4 {
-    font-size: 20px;
+    font-size: 25px;
     color: rgb(212, 193, 169);
     font-weight: 300;
     text-align: center;
@@ -100,6 +100,7 @@ nav{
     top: 20%;
     left: 47%;
     height: 70px;
+    width: 50%;
 }
 nav .navmenu{
     position: relative;
@@ -126,7 +127,7 @@ nav:hover ul li{
 }
 nav ul{
     position: relative;
-    left: -4.5%;
+    left: -12%;
     margin: 0;
 }
 nav ul li{
@@ -136,6 +137,7 @@ nav ul li{
     border-bottom: 1px solid #042331;
     list-style-type: none;
     background-color: #38545e;
+    width: 30%;
     border-top: none;
     opacity: 0%;
 }
